--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ input{
  border: 2px solid black;
  font-family: sans-serif;
 }
-
 .boton{
     width: 100px;
     height: 30px;
@@ -35,41 +34,49 @@ input{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
-    
 }
+
 .header-dex{
  width: 100%;
  height: 100px;
  background-color: red;
  display: flex;
  align-items: center;
- 
 }
 .search-container{
     display: flex;
-    width: 500px;
+    width: 400px;
     height: 70px;
-    border: 1px solid black;
     justify-content: center;
     align-items: center;
 }
+@media(max-width:400px){
+    .search-container{
+        width: 200px;
+    }
+}
 .pokemon-card{
-    height: 500px;
+    height: 450px;
     width: 600px;
     display: flex;
     align-items: center;
-    
+    border-radius: 20px;
     flex-direction: column;
     border: 1px solid black;
 }
+
 .card-photo{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
     height: 150px;
-    border: 1px solid red;
+    border-bottom: 2px solid black;
+}
+@media(max-width:700px){
+    .pokemon-card{
+        width: 300px;
+    }
 }
 .fotitos{
     display: flex;
@@ -77,7 +84,7 @@ input{
     align-items: center;
     width: 150px;
     height: 100%;
-    border: 1px solid black;
+    
 }
 .pokemon-name{
     display: flex;
@@ -85,46 +92,37 @@ input{
     justify-content: center;
     width: 100%;
     height: 20px;
-    border: 1px solid blue;
+   
 }
 .type{
     display: flex;
     align-items: center;
-    justify-content: center;
-    height: 100px;
-    width: 100%;
-    border: 1px solid green;
+    justify-content: space-evenly;
+    height: 50px;
+    width: 50%;
+    
 }
 .caracteristicas{
     display: flex;
     justify-content: center;
     height: 200px;
     width: 100%;
-    border: 2px solid rgb(0, 191, 255);
+    
 }
 .stats{
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    
     width: 200px;
     height: 100%;
 }
 .numeros-stats{
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    
     width: 100px;
     height: 100%;
     align-items: center;
 }
 
-.tipos{
-    height: 30px;
-    width: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 30px;
-    background-color: rgb(0, 136, 255);
-    border: 1px solid black;
-}
+
